v5.0.0/llms/components/ix-pill.md
# ix-pill

> No component summary available.

## Documentation

- https://ix.siemens.io//docs/components/pill/guide.md

## Figma IDs

- 312:1219

## Related examples

- content-header-with-slot
  - angular: [angular/content-header-with-slot.css](../../examples/angular-examples/src/preview-examples/content-header-with-slot.css), [angular/content-header-with-slot.html](../../examples/angular-examples/src/preview-examples/content-header-with-slot.html), [angular/content-header-with-slot.ts](../../examples/angular-examples/src/preview-examples/content-header-with-slot.ts)
  - angular-standalone: [angular-standalone/content-header-with-slot.css](../../examples/angular-standalone-examples/src/preview-examples/content-header-with-slot.css), [angular-standalone/content-header-with-slot.html](../../examples/angular-standalone-examples/src/preview-examples/content-header-with-slot.html), [angular-standalone/content-header-with-slot.ts](../../examples/angular-standalone-examples/src/preview-examples/content-header-with-slot.ts)
  - html: [html/content-header-with-slot.css](../../examples/html-examples/src/preview-examples/content-header-with-slot.css), [html/content-header-with-slot.html](../../examples/html-examples/src/preview-examples/content-header-with-slot.html)
  - react: [react/content-header-with-slot.scoped.css](../../examples/react-examples/src/preview-examples/content-header-with-slot.scoped.css), [react/content-header-with-slot.tsx](../../examples/react-examples/src/preview-examples/content-header-with-slot.tsx)
  - vue: [vue/content-header-with-slot.css](../../examples/vue-examples/src/preview-examples/content-header-with-slot.css), [vue/content-header-with-slot.vue](../../examples/vue-examples/src/preview-examples/content-header-with-slot.vue)
- pill
  - angular: [angular/pill.css](../../examples/angular-examples/src/preview-examples/pill.css), [angular/pill.html](../../examples/angular-examples/src/preview-examples/pill.html), [angular/pill.ts](../../examples/angular-examples/src/preview-examples/pill.ts)
  - angular-standalone: [angular-standalone/pill.css](../../examples/angular-standalone-examples/src/preview-examples/pill.css), [angular-standalone/pill.ts](../../examples/angular-standalone-examples/src/preview-examples/pill.ts)
  - html: [html/pill.css](../../examples/html-examples/src/preview-examples/pill.css), [html/pill.html](../../examples/html-examples/src/preview-examples/pill.html)
  - react: [react/pill.scoped.css](../../examples/react-examples/src/preview-examples/pill.scoped.css), [react/pill.tsx](../../examples/react-examples/src/preview-examples/pill.tsx)
  - vue: [vue/pill.css](../../examples/vue-examples/src/preview-examples/pill.css), [vue/pill.vue](../../examples/vue-examples/src/preview-examples/pill.vue)
- pill-variants
  - angular: [angular/pill-variants.css](../../examples/angular-examples/src/preview-examples/pill-variants.css), [angular/pill-variants.ts](../../examples/angular-examples/src/preview-examples/pill-variants.ts)
  - angular-standalone: [angular-standalone/pill-variants.css](../../examples/angular-standalone-examples/src/preview-examples/pill-variants.css), [angular-standalone/pill-variants.ts](../../examples/angular-standalone-examples/src/preview-examples/pill-variants.ts)
  - html: [html/pill-variants.css](../../examples/html-examples/src/preview-examples/pill-variants.css), [html/pill-variants.html](../../examples/html-examples/src/preview-examples/pill-variants.html)
  - react: [react/pill-variants.scoped.css](../../examples/react-examples/src/preview-examples/pill-variants.scoped.css), [react/pill-variants.tsx](../../examples/react-examples/src/preview-examples/pill-variants.tsx)
  - vue: [vue/pill-variants.css](../../examples/vue-examples/src/preview-examples/pill-variants.css), [vue/pill-variants.vue](../../examples/vue-examples/src/preview-examples/pill-variants.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `alignLeft`; attr: `align-left`; type: `boolean`; default: `false` - Align pill content left
- `ariaLabelIcon`; attr: `aria-label-icon`; type: `string | undefined` - ARIA label for the icon
- `background`; attr: `background`; type: `string | undefined` - Custom color for pill. Only working for `variant='custom'`
- `icon`; attr: `icon`; type: `string | undefined` - Show icon
- `outline`; attr: `outline`; type: `boolean`; default: `false` - Show pill as outline
- `pillColor`; attr: `pill-color`; type: `string | undefined` - Custom font color for pill. Only working for `variant='custom'`
- `tooltipText`; attr: `tooltip-text`; type: `boolean | string`; default: `false` - Display a tooltip. By default, no tooltip will be displayed. Add the attribute to display the text content of the component as a tooltip or use a string to display a custom text.
- `variant`; attr: `variant`; type: `"alarm" | "critical" | "custom" | "info" | "neutral" | "primary" | "success" | "warning"`; default: `'primary'` - Pill variant

## Events

- None

## Slots

- None
